fix: let cards flex and title wrap

--- a/src/features/feed/Feed.module.scss
+++ b/src/features/feed/Feed.module.scss
@@ -3,7 +3,7 @@
 
 .feed {
   flex-grow: 1;
-  flex-shrink: 0;
+  flex-shrink: 1;
 }
 
 .noArticles {
