--- a/src/features/feed/article-card/ArticleCard.module.scss
+++ b/src/features/feed/article-card/ArticleCard.module.scss
@@ -21,8 +21,8 @@
   background: var(--color-accent-whisper);
   border: 1px solid rgba(var(--color-primary-rgb), var(--opacity-fade-half));
 
-  .title::after {
-    transform: translate3d(0, 0, 0);
+  .title {
+    background-size: 100% 4px;
   }
 }
 
@@ -50,29 +50,27 @@
 
 .title {
   @include title-large;
-  line-height: 2.8rem;
+  line-height: 1.2;
+  margin-bottom: grid(2);
   color: var(--color-blue-20);
-  display: inline-block;
+  display: inline;
   position: relative;
-  overflow: hidden;
-  transition: color 200ms;
-
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: 2px;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background-color: var(--color-accent);
-    transition: transform 250ms;
-    transform: translate3d(-100%, 0, 0);
-  }
+  background-image: linear-gradient(
+    to right,
+    var(--color-accent) 0%,
+    var(--color-accent) 100%
+  );
+  background-size: 0% 4px;
+  background-position: left bottom 2px;
+  background-repeat: no-repeat;
+  transition:
+    background-size 250ms,
+    color 200ms;
 }
 
 .description {
   color: var(--color-neutral-10);
-  margin-top: -0.25rem;
+  margin-top: 0.5rem;
 }
 
 .bottomRow {
